Added missing X-XSS-Protection header.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,7 @@
 {%- endif -%}
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self';">
   {%- if page.sitemap == false %}
   <meta name="robots" content="noindex"/>
   {%- endif %}
